# qiggie

./: .gitmodules  Makefile  docker-compose.yml  gen-dart-protos.sh  gen-go-protos.sh  gen-python-protos.sh  gen-ruby-protos.sh
.github/workflows/: main.yml
auth-server/: .gitignore  Dockerfile  auth_pb2.py  auth_pb2_grpc.py  customer_pb2.py  customer_pb2_grpc.py  main.py  test_main.http
auth-server/db/: __init__.py
auth-server/protos/: auth.proto
auth-server/services/: auth.py
auth-server/tokenizer/: __init__.py
backend/: .gitignore  Cargo.toml  build.rs
backend/protos/: account.proto  transaction.proto  user.proto
backend/src/: db_connection.rs  main.rs
bank-server/: go.mod  go.sum  main.go
bank-server/clients/: customer.go
bank-server/config/: db.go
bank-server/protos/: bank.proto
bank-server/services/: bank.go
bank-server/utils/: generics.go
customer-server/: Cargo.toml  build.rs
customer-server/proto/: customer.proto
customer-server/proto/googleapis/google/pubsub/: schema.proto
customer-server/proto/googleapis/google/pubsub/v1/: pubsub.proto
customer-server/protos/: customer.proto
customer-server/src/: customer.rs  main.rs  server.rs
customer-server/src/config/: db.rs
customer-server/src/services/: customer.rs  mod.rs
go-bank-server/: go.mod
go-bank-server/protos/: bank.proto
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
rust-customer-server/: Cargo.toml  build.rs
savings-server/: .gitignore  Dockerfile  Gemfile  build.gradle.kts  settings.gradle.kts
(+88 files in other folders)
