[package]
name = "customer-piggybank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.9.1", features = [] }
tonic-reflection = "0.9.1"
bytes = "1.4.0"
prost = "0.11.8"
prost-derive = "0.11.8"
prost-types = "0.11.8"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.12"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"] }
async-stream = "0.3.4"
http = "0.2.9"
tower = "0.4.13"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
console = "0.15.5"
chrono = "0.4.24"
# Database(MongoDB)
mongodb = "2.4.0"
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

# Help you use gRPC protobuf files in Rust.
[build-dependencies]
tonic-build = "0.9.1"